[package]
name = "popusk"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
thiserror = "1.0.63"
serde = "1.0.204"
toml = "0.8.19"
serde_derive = "1.0.204"
memmap2 = "0.9.4"
clap = { version = "4.5.10", features = ["derive"] }
# mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
mlua = { git = "https://github.com/mlua-rs/mlua.git", features = [
    "lua54",
    "vendored",
], rev = "c58f67b140f09315855a2a67de8e1b05c96e5fe7" }
term_size = "0.3.2"
walkdir = "2.5.0"
itertools = "0.13.0"
